NS_FXAI/SKAFFOLD/k8s-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fxai-fl-app
  namespace: fxai
spec:
  ports:
  - port: 3000
    name: http
    #type: LoadBalancer
  type: NodePort 
  selector:
    app: fxai-fl-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fxai-fl-app-deployment 
  namespace: fxai
spec:
  selector:
    matchLabels:
      app: fxai-fl-app 
  template:
    metadata:
      labels:
        app: fxai-fl-app 
    spec:
      hostAliases:
      - ip: "192.168.72.110"
        hostnames:
        - "fxai-fl-app.impro.pe.kr"
        - "minio.impro.pe.kr" 
      containers:
      - name: fxai-fl-app 
        image: improf/fxai-fl-components 
        ports:
          - containerPort: 3000
